--- a/.github/workflows/main_rxdemo.yml
+++ b/.github/workflows/main_rxdemo.yml
@@ -15,7 +15,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+    
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.13.0'
+      
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
@@ -23,7 +28,8 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: |
+          dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
