ci: try to find why not ang is copied

--- a/.github/workflows/main_rxdemo.yml
+++ b/.github/workflows/main_rxdemo.yml
@@ -37,7 +37,8 @@ jobs:
             cd RxjsAng
             npm i
             npm run build
-            Copy-Item .\dist\RxjsAng ..\RxJSDemoWebAPI\wwwroot\
+            gci .\dist\RxjsAng\*.*
+            Copy-Item .\dist\RxjsAng\*.* ..\RxJSDemoWebAPI\wwwroot\rxjsAng\
 
 
 
