ci: modified to rxjsang

--- a/.github/workflows/main_rxdemo.yml
+++ b/.github/workflows/main_rxdemo.yml
@@ -36,7 +36,7 @@ jobs:
             cd RxJSDemo
             cd RxjsAng
             npm i
-            npm run build
+            npm run buildAzure
             gci .\dist\RxjsAng\*.*
             Copy-Item .\dist\RxjsAng\*.* ..\RxJSDemoWebAPI\wwwroot\rxjsAng\
 
