--- a/src/RxJSDemo/RxJSDemoWebAPI/RxJSDemoWebAPI.csproj
+++ b/src/RxJSDemo/RxJSDemoWebAPI/RxJSDemoWebAPI.csproj
@@ -1,17 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\RxJSData\RxJSData.csproj" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<ProjectReference Include="..\RxJSData\RxJSData.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AMSWebAPI" Version="2022.5.25.1154" />
+		<PackageReference Include="AMS_Base" Version="2022.5.25.1154" />
+	</ItemGroup>
 </Project>
