--- a/src/RxJSDemo/RxJSDemoWebAPI/RxJSDemoWebAPI.csproj
+++ b/src/RxJSDemo/RxJSDemoWebAPI/RxJSDemoWebAPI.csproj
@@ -16,5 +16,6 @@
 	<ItemGroup>
 		<PackageReference Include="AMSWebAPI" Version="2022.5.25.1154" />
 		<PackageReference Include="AMS_Base" Version="2022.5.25.1154" />
+		<PackageReference Include="NetCore2Blockly" Version="5.2022.730.2029" />
 	</ItemGroup>
 </Project>
